--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
+    "styled-components": "^5.3.10",
+    "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.1.3",
+    "@types/react": "^18.2.6",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.1",
+    "typescript": "^5.0.4"
   }
 }
